// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`English render 1`] = `
<div>
  <button
    class="button"
  >
    <span
      class="buttonIconSearch"
    />
    <span
      class="buttonText"
    >
      Search
    </span>
  </button>
</div>
`;

exports[`Norsk render 1`] = `
<div>
  <button
    class="button"
  >
    <span
      class="buttonIconSearch"
    />
    <span
      class="buttonText"
    >
      Søk
    </span>
  </button>
</div>
`;
